# python-template

./: .editorconfig  README.md  cookiecutter.json  pyproject.toml
hooks/: pre-commit
{{cookiecutter.projectname}}/: Makefile  README.md  pyproject.toml  requirements-dev.txt
{{cookiecutter.projectname}}/hooks/: pre-commit
{{cookiecutter.projectname}}/tests/: test_dummy.py
